# Lite-Description

./: .gitignore  CMakeLists.txt  README.md  package.xml  pixi.toml  pyproject.toml
.github/workflows/: test.yml
robot_assets/: loader.py
robot_assets/actuators/: damiao.py  func.py  ideal.py  robstride.py  sito.py
robot_assets/workflow/: finalize_urdf.py  generate.py  onshape_to_urdf.py  robot_model.py  urdf_to_mjcf.py  urdf_to_xacro.py
robot_descriptions/actuators/: robstride.py
robots/lite/cad/: joint_properties.json
robots/lite/cad/scad/: left_foot.scad  right_foot.scad
robots/lite/meshes/visual/: chest_visual.stl  head_visual.stl  left_shoulder_pitch_visual.stl  left_shoulder_roll_visual.stl  left_wrist_roll_visual.stl  neck_roll_visual.stl  neck_yaw_visual.stl  right_shoulder_pitch_visual.stl  right_wrist_roll_visual.stl
robots/lite/mjcf/: lite.xml
robots/lite/urdf/: lite.urdf
robots/lite/xacro/: lite.description.xacro  lite.urdf.xacro
robots/lite_bimanual/cad/: config.json  joint_properties.json  physics.json  ros2_control.json
robots/lite_bimanual/meshes/visual/: chest_visual.stl  left_elbow_pitch_visual.stl  left_hand_visual.stl  left_shoulder_yaw_visual.stl  left_wrist_roll_visual.stl  left_wrist_yaw_visual.stl  right_hand_visual.stl  right_shoulder_pitch_visual.stl  right_shoulder_roll_visual.stl  right_shoulder_yaw_visual.stl  right_wrist_roll_visual.stl
robots/lite_bimanual/mjcf/: lite_bimanual.xml
robots/lite_bimanual/urdf/: lite_bimanual.urdf
robots/lite_bimanual/xacro/: lite_bimanual.description.xacro  lite_bimanual.ros2_control.xacro  lite_bimanual.urdf.xacro
robots/lite_biped/cad/: config.json  joint_properties.json  physics.json  ros2_control.json
robots/lite_biped/mjcf/: lite_biped.xml  lite_biped_scene.xml
robots/lite_biped/urdf/: lite_biped.urdf
robots/lite_biped/xacro/: lite_biped.description.xacro  lite_biped.ros2_control.xacro  lite_biped.urdf.xacro
robots/lite_dummy/cad/: joint_properties.json  physics.json  ros2_control.json
robots/lite_dummy/mjcf/: lite_dummy.xml
robots/lite_dummy/urdf/: lite_dummy.urdf
robots/lite_dummy/xacro/: lite_dummy.description.xacro  lite_dummy.ros2_control.xacro  lite_dummy.urdf.xacro
robots/lite_pro/cad/: config.json  joint_properties.json
robots/lite_pro/mjcf/: lite_pro.xml
robots/lite_pro/urdf/: lite_pro.urdf
robots/lite_pro/xacro/: lite_pro.description.xacro  lite_pro.urdf.xacro
tests/: conftest.py  test_parity.py  test_ros2_artifacts.py  test_urdf_to_mjcf.py
(+82 files in other folders)
