[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-assets"
version = "0.3.1"
description = "Robot asset tool: generate URDF / MJCF / xacro from Onshape CAD, and load robot descriptions"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.4.0",
    "onshape-to-robot>=1.8.0",
    "pymeshlab>=2025.7.post1",
]

[project.scripts]
# One converter, all three formats (CAD -> URDF + MJCF + xacro).
robot-assets-generate = "robot_assets.workflow.generate:main"
# Individual stages (useful for partial regen without re-hitting the Onshape API).
robot-assets-onshape-to-urdf = "robot_assets.workflow.onshape_to_urdf:main"
robot-assets-finalize-urdf = "robot_assets.workflow.finalize_urdf:main"
robot-assets-urdf-to-mjcf = "robot_assets.workflow.urdf_to_mjcf:main"
robot-assets-urdf-to-xacro = "robot_assets.workflow.urdf_to_xacro:main"

[dependency-groups]
test = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["robot_assets"]

[tool.hatch.build.targets.sdist]
include = [
    "/robot_assets",
    "/README.md",
    "/pyproject.toml",
]
